tests/invalid/foreign_enum_invalid.err_exp
foreign_enum_invalid.m:027: In `:- pragma foreign_enum' declaration for type
foreign_enum_invalid.m:027:   `incomplete'/0:
foreign_enum_invalid.m:027:   error: the following constructor does not have a
foreign_enum_invalid.m:027:   foreign value:
foreign_enum_invalid.m:027:       `baz'.
foreign_enum_invalid.m:032: In `:- pragma foreign_enum' declaration for type
foreign_enum_invalid.m:032:   `not_a_bijection'/0:
foreign_enum_invalid.m:032:   error: the specified mapping between the names of
foreign_enum_invalid.m:032:   Mercury constructors and the corresponding
foreign_enum_invalid.m:032:   foreign values is inconsistent.
foreign_enum_invalid.m:032:   The following Mercury constructor name is
foreign_enum_invalid.m:032:   repeated:
foreign_enum_invalid.m:032:       `a'.
foreign_enum_invalid.m:032:   The following foreign value is repeated:
foreign_enum_invalid.m:032:       `60'.
foreign_enum_invalid.m:040: Error: [38;5;203mduplicate foreign enum definition in C[39;49m for
foreign_enum_invalid.m:040:   [38;5;87m`dup_foreign_enum'/0.[39;49m
foreign_enum_invalid.m:039:   The original definition is here.
